# 3sad_oop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Figure.h  Rectangle.h  Square.h  Triangle.h
src/: Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
test/: test_figures.cpp
